--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -33,7 +33,7 @@
           {% endblock %}
         </div>
         <!-- MULTIBAR -->
-        <nav class="navbar color-1-trans" id="multibar">
+        <nav class="navbar color-4-trans" id="multibar">
           <div class="container" id="multibar-drop">
             {% include 'multibar.html' %}
           </div>
@@ -50,12 +50,18 @@
         {% else %}
         <div class="row collapse" id="browse-collapse">
         {% endif %}
-          <div class="col alphabet-group alphabet-buttons">
+          <div class="col alphabet-buttons">
             {% for letter in alphabet %}
             <a class="btn btn-dope alphabet-button" href="/browse/?q={{ letter }}" id="alphabet-{{ letter }}">
+              {% if letter == '0' %}
+              <span>
+                #
+              </span>
+              {% else %}
               <span>
                 {{ letter }}
               </span>
+              {% endif %}
             </a>
             {% endfor %}
           </div>
