--- a/podcasts/templates/subscriptions.html
+++ b/podcasts/templates/subscriptions.html
@@ -1,34 +1,32 @@
-<div class="row results-content">
-  <div class="col">
-    {% for subscription in results.podcasts %}
-      <div class="row">
-        {% with subscription.parent as podcast %}
-        <div class="col-auto">
-          <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="/podinfo/{{ podcast.itunesid }}/">
-            <img class="img-fluid" src="//images.weserv.nl/?url={{ podcast.artworkUrl }}100x100bb.jpg&w=100&h=100&t=absolute" />
-          </a>
-        </div>
-        <div class="col">
-          <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="/podinfo/{{ podcast.itunesid }}/" title="{{ podcast.title }}">
-            <h5 class="subscription-result-title">
-                {{ podcast.title }}
-            </h5>
-          </a>
-          <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="/podinfo/{{ podcast.itunesid }}/" title="{{ podcast.artist }}">
-            <h6 class="subscription-result-artist">
-            <span>by </span>
-              {{ podcast.artist }}
-            </h6>
-          </a>
-          {% endwith %}
-          <p>
-            {{ subscription.last_updated }}
-          </p>
-        </div>
+<div class="col results-content">
+  {% for subscription in results.podcasts %}
+    <div class="row">
+      {% with subscription.parent as podcast %}
+      <div class="col-auto">
+        <a class="showpod" data-podid="{{ podcast.podid }}" href="/showpod/{{ podcast.podid }}/">
+          <img class="img-fluid" src="//images.weserv.nl/?url={{ podcast.artworkUrl }}100x100bb.jpg&w=100&h=100&t=absolute" />
+        </a>
       </div>
-      {% if not forloop.last %}
-        <hr class="h-line" />
-      {% endif %}
-    {% endfor %}
-  </div>
+      <div class="col">
+        <a class="showpod" data-podid="{{ podcast.podid }}" href="/showpod/{{ podcast.podid }}/" title="{{ podcast.title }}">
+          <h5 class="subscription-result-title">
+              {{ podcast.title }}
+          </h5>
+        </a>
+        <a class="showpod" data-podid="{{ podcast.podid }}" href="/showpod/{{ podcast.podid }}/" title="{{ podcast.artist }}">
+          <h6 class="subscription-result-artist">
+          <span>by </span>
+            {{ podcast.artist }}
+          </h6>
+        </a>
+        {% endwith %}
+        <p>
+          {{ subscription.last_updated }}
+        </p>
+      </div>
+    </div>
+    {% if not forloop.last %}
+      <hr class="h-line" />
+    {% endif %}
+  {% endfor %}
 </div>
