--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -28,9 +28,11 @@
     <!-- MAIN CONTENT -->
     <div id="main-wrapper">
       <div class="container-fluid sticky-top extended" id="flap">
-        <div class="container open" id="center-stage">
-          {% block center-stage %}
-          {% endblock %}
+        <div class="container open" id="xxx">
+          <div class="row color-5-trans" id="center-stage">
+            {% block center-stage %}
+            {% endblock %}
+          </div>
         </div>
         <!-- MULTIBAR -->
         <nav class="navbar color-4-trans" id="multibar">
