--- a/index/static/style.css
+++ b/index/static/style.css
@@ -1,4 +1,4 @@
-500rgba(0, 191,165, 1)/* GLOBAL */
+32500rgba(0, 191,165, 1)/* GLOBAL */
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   line-height: 1.42857143;
@@ -17,7 +17,7 @@ body {
   border: 2px solid rgba(0, 191, 165, 1);
   padding: .25rem .5rem;
   color: #2e2e2e;
-  font-size: 16px;
+  font-size: unset;
   background-color: rgba(255, 255, 255, .5);
   box-shadow: none;
   outline: rgba(0,0,0,0);
@@ -138,7 +138,7 @@ body {
   background: none!important;
   display: inline-block;
   border: none;
-  border-bottom: 2px solid rgba(255, 255, 255, 0);
+  border-bottom: 2px solid rgba(167, 255, 235, 0);
   color: rgba(255, 255, 255, 1);
   font-size: 16px;
   padding: 5px;
@@ -147,7 +147,7 @@ body {
   -webkit-transition: border .25s ease-in-out;
 }
 .nav-link-dope:hover {
-  border-bottom: 2px solid rgba(255, 255, 255, 1);
+  border-bottom: 2px solid rgba(167, 255, 235, 1);
   text-decoration: none;
   color: rgba(255, 255, 255, 1);
 }
@@ -303,9 +303,6 @@ body {
   animation: none;
   -webkit-animation: none;
   color: inherit;
-}
-
-#dopepod {
 }
 
 /* LOADING ANIMATIONS */
@@ -467,38 +464,38 @@ body {
 }
 .loading-b-1 {
   left: -60px;
-  animation: appear .25s ease-in 1s forwards, disappear .25s ease-in 3s forwards;
-  -webkit-animation: appear .25s ease-in 1s forwards, disappear .25s ease-in 3s forwards;
+  animation: appear .25s ease-in 1s forwards, disappear .25s ease-in 4s forwards;
+  -webkit-animation: appear .25s ease-in 1s forwards, disappear .25s ease-in 4s forwards;
 }
 .loading-b-2 {
   left: -40px;
-  animation: appear .25s ease-in 1.1s forwards, disappear .25s ease-in 3.1s forwards;
-  -webkit-animation: appear .25s ease-in 1.1s forwards, disappear .25s ease-in 3.1s forwards;
+  animation: appear .25s ease-in 1.1s forwards, disappear .25s ease-in 4.1s forwards;
+  -webkit-animation: appear .25s ease-in 1.1s forwards, disappear .25s ease-in 4.1s forwards;
 }
 .loading-b-3 {
   left: -20px;
-  animation: appear .25s ease-in 1.2s forwards, disappear .25s ease-in 3.2s forwards;
-  -webkit-animation: appear .25s ease-in 1.2s forwards, disappear .25s ease-in 3.2s forwards;
+  animation: appear .25s ease-in 1.2s forwards, disappear .25s ease-in 4.2s forwards;
+  -webkit-animation: appear .25s ease-in 1.2s forwards, disappear .25s ease-in 4.2s forwards;
 }
 .loading-b-4 {
   left: 0;
-  animation: appear .25s ease-in 1.3s forwards, disappear .25s ease-in 3.3s forwards;
-  -webkit-animation: appear .25s ease-in 1.3s forwards, disappear .25s ease-in 3.3s forwards;
+  animation: appear .25s ease-in 1.3s forwards, disappear .25s ease-in 4.3s forwards;
+  -webkit-animation: appear .25s ease-in 1.3s forwards, disappear .25s ease-in 4.3s forwards;
 }
 .loading-b-5 {
   right: -20px;
-  animation: appear .25s ease-in 1.4s forwards, disappear .25s ease-in 3.2s forwards;
-  -webkit-animation: appear .25s ease-in 1.4s forwards, disappear .25s ease-in 3.2s forwards;
+  animation: appear .25s ease-in 1.4s forwards, disappear .25s ease-in 4.2s forwards;
+  -webkit-animation: appear .25s ease-in 1.4s forwards, disappear .25s ease-in 4.2s forwards;
 }
 .loading-b-6 {
   right: -40px;
-  animation: appear .25s ease-in 1.5s forwards, disappear .25s ease-in 3.1s forwards;
-  -webkit-animation: appear .25s ease-in 1.5s forwards, disappear .25s ease-in 3.1s forwards;
+  animation: appear .25s ease-in 1.5s forwards, disappear .25s ease-in 4.1s forwards;
+  -webkit-animation: appear .25s ease-in 1.5s forwards, disappear .25s ease-in 4.1s forwards;
 }
 .loading-b-7 {
   right: -60px;
-  animation: appear .25s ease-in 1.6s forwards, disappear .25s ease-in 3s forwards;
-  -webkit-animation: appear .25s ease-in 1.6s forwards, disappear .25s ease-in 3s forwards;
+  animation: appear .25s ease-in 1.6s forwards, disappear .25s ease-in 4s forwards;
+  -webkit-animation: appear .25s ease-in 1.6s forwards, disappear .25s ease-in 4s forwards;
 }
 .loading-a {
   position: absolute;
@@ -520,8 +517,8 @@ body {
   top: 0;
   left: -60px;
   height: 36px;
-  animation: appear .5s ease-in 4s forwards;
-  -webkit-animation: appear .5s ease-in 4s forwards;
+  animation: appear .5s ease-in 5s forwards;
+  -webkit-animation: appear .5s ease-in 5s forwards;
 }
 
 /* MAIN */
@@ -568,7 +565,6 @@ body {
   justify-content: flex-end;
   padding: 10px 2px 6px 10px;
   border-top: 2px solid rgba(0, 191,165, 1);
-
 }
 .options-button, .options-button:focus, .options-button.focus {
   margin-right: 5px;
@@ -618,8 +614,7 @@ body {
 #multibar-l {
   min-width: 100px;
   height: 36px;
-  padding-left: 85px;
-  padding-right: 0;
+  padding: 0;
   display: inline-flex;
 }
 #multibar-c {
@@ -628,6 +623,7 @@ body {
   margin: auto;
 }
 #multibar-r {
+  padding-left: 0;
   display: inline-flex;
   justify-content: flex-end;
 }
@@ -656,14 +652,18 @@ body {
 #flap.extended{
   top: -500px;
 }
-#center-stage {
+#xxx {
   z-index: 90;
   overflow: hidden;
 }
-#center-stage.open {
+#xxx.open {
   height: 500px;
   padding-top: 44px;
   margin-bottom: -44px;
+}
+#center-stage {
+  height: 100%;
+  padding: 20px 0 10px;
 }
 
 /* SEARCH */
@@ -744,6 +744,7 @@ body {
 
 }
 .login-field {
+  font-size: unset;
   padding: .25rem .5rem;
   border-radius: .25rem;
   border: 2px solid rgba(0, 191,165, 1);
@@ -779,9 +780,6 @@ body {
 }
 
 /* DASHBOARD */
-#dashboard {
-  height: 456px;
-}
 #dashboard-top {
   text-align: center;
   padding: 30px;
@@ -810,22 +808,10 @@ body {
 }
 
 /* PODINFO */
-#showpod {
-  height: 100%;
-  padding: 20px 0 10px;
-}
 #showpod-c {
   overflow: hidden;
   padding-left: 0;
-}
-#showpod-main {
-  height: 100%;
-}
-#showpod-bottom {
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-#showpod-options {
+  height: 380px;
 }
 #showpod-l {
   text-align: center;
@@ -838,6 +824,7 @@ body {
   border-radius: .25rem;
 }
 #showpod-r {
+  height: 380px;
   padding-left: 0;
 }
 .showpod-side-list {
@@ -848,10 +835,10 @@ body {
 }
 #showpod-l .showpod-side-list {
   margin-top: 10px;
+  overflow: hidden;
 }
 #showpod-r .showpod-side-list {
   overflow: hidden;
-  height: 100%;
 }
 #showpod-l .showpod-side-list li {
   margin-bottom: 4px;
@@ -860,6 +847,7 @@ body {
   margin-bottom: 4px;
 }
 #showpod-options {
+  padding-top: 10px;
   margin: auto;
 }
 #showpod-copyright {
@@ -924,35 +912,10 @@ body {
 }
 .results-bar {
   padding-top: 10px;
-}
-.results-header {
-  min-width: 250px;
-  margin-bottom: 10px;
-}
-.results-header .dummy {
-  width: 100px;
+  padding-bottom: 10px;
 }
 .results-header .header {
   font-size: 20px;
-  font-weight: 400;
-  font-size: 20px;
-  min-width: 100px;
-}
-.results-header a {
-  margin-left: 4px;
-  margin-bottom: 4px;
-  float: right;
-}
-.results-collapse.show {
-    display: flex;
-}
-.results-options {
-  margin-bottom: 10px;
-  margin-left: auto;
-  text-align: end;
-}
-.options-bar {
-  overflow: hidden;
 }
 .results-content a {
   color: #000;
@@ -961,11 +924,16 @@ body {
   text-decoration: none;
 }
 .results-buttons {
-  position: absolute;
-  font-size: 20px;
-  top: 0;
-  right: 0;
-  padding-top: 8px;
+  margin-left: auto;
+  justify-content: flex-end;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+.results-buttons a {
+  margin-left: 4px;
+  margin-bottom: 4px;
 }
 .view-button {
   min-width: 36px;
@@ -980,6 +948,9 @@ body {
 .results-collapse {
   padding: 10px 0;
 }
+.results-collapse.show {
+  display: flex;
+}
 .result-box {
   padding: 10px;
 }
@@ -992,11 +963,11 @@ body {
   -webkit-box-shadow: rgba(0,0,0,.3) 0 0 10px;
 }
 .result-box img:hover {
-  -moz-transform: scale(1.02);
-  -webkit-transform: scale(1.02);
-  -o-transform: scale(1.02);
-  -ms-transform: scale(1.02);
-  transform: scale(1.02);
+  -moz-transform: scale(1.05);
+  -webkit-transform: scale(1.05);
+  -o-transform: scale(1.05);
+  -ms-transform: scale(1.05);
+  transform: scale(1.05);
 }
 .result-image {
   object-fit: cover;
@@ -1005,11 +976,39 @@ body {
 .charts-box {
   padding: 10px;
 }
+.subscriptions-box {
+  padding: 10px;
+}
+.subscriptions-result {
+  display: inline-block;
+  width: 100%;
+  padding: 10px;
+  border-radius: .25rem;
+  border: 2px solid rgba(0, 191,165, 0);
+  transition: all .25s ease-in-out;
+  -moz-transition: all .25s ease-in-out;
+  -webkit-transition: all .25s ease-in-out;
+}
+.subscriptions-result:hover {
+  box-shadow: rgba(0,0,0,.3) 0 0 10px;
+  -moz-box-shadow: rgba(0,0,0,.3) 0 0 10px;
+  -webkit-box-shadow: rgba(0,0,0,.3) 0 0 10px;
+  border: 2px solid rgba(0, 191,165, 1);
+}
+.subscriptions-result img {
+  float: left;
+  margin-right: 5px;
+  border-radius: .25rem;
+  box-shadow: rgba(0,0,0,.3) 0 0 3px;
+  -moz-box-shadow: rgba(0,0,0,.3) 0 0 3px;
+  -webkit-box-shadow: rgba(0,0,0,.3) 0 0 3px;
+}
 .charts-result {
   display: inline-block;
   width: 100%;
   padding: 10px;
   border-radius: .25rem;
+  border: 2px solid rgba(0, 191,165, 0);
   transition: all .25s ease-in-out;
   -moz-transition: all .25s ease-in-out;
   -webkit-transition: all .25s ease-in-out;
@@ -1018,8 +1017,10 @@ body {
   box-shadow: rgba(0,0,0,.3) 0 0 10px;
   -moz-box-shadow: rgba(0,0,0,.3) 0 0 10px;
   -webkit-box-shadow: rgba(0,0,0,.3) 0 0 10px;
+  border: 2px solid rgba(0, 191,165, 1);
 }
 .charts-result img {
+  margin-left: 5px;
   float: right;
   border-radius: .25rem;
   box-shadow: rgba(0,0,0,.3) 0 0 3px;
@@ -1030,9 +1031,10 @@ body {
   float: left;
   margin-right: 10px;
   text-align: center;
-  height: 30px;
-  width: 30px;
-  font-size: 16px;
+  height: 32px;
+  width: 32px;
+  font-size: 18px;
+  font-weight: 600;
   border-radius: 50%;
   border: 2px solid rgba(0, 191,165, 1);
   color: #2e2e2e;
@@ -1040,16 +1042,17 @@ body {
 }
 
 .charts-result .result-title, .charts-result .result-title:hover {
-  font-size: 20px;
+  font-size: 16px;
   overflow: hidden;
-  height: 48px;
+  height: 58px;
+  margin-bottom: 4px;
 }
 .charts-result .result-artist, .charts-result .result-artist:hover {
   margin-bottom: 0;
   font-weight: 400;
   font-size: 14px;
   overflow: hidden;
-  height: 40px;
+  height: 38px;
 }
 .search-result-title, .search-result-title:hover {
   font-size: 16px;
@@ -1064,13 +1067,17 @@ body {
   overflow: hidden;
   margin: 0;
 }
-.subscription-result-title, .subscription-result-title:hover {
+.subscriptions-result .result-title, .subscriptions-result .result-title:hover {
+  font-size: 20px;
+  height: 50px;
   overflow: hidden;
-  max-height: 48px;
 }
-.subscription-result-artist, .subscription-result-artist:hover {
+.subscriptions-result .result-artist, .subscriptions-result .result-artist:hover {
+  margin-bottom: 0;
+  font-weight: 400;
+  font-size: 14px;
   overflow: hidden;
-  max-height: 38px;
+  height: 40px;
 }
 .browse-results {
 }
@@ -1097,6 +1104,7 @@ hr.h-line {
 
 /* LOADING GIFS */
 .loading-icon {
+  margin-top: 8px;
   margin-right: 10px;
 }
 
@@ -1115,10 +1123,8 @@ hr.h-line {
   box-shadow: rgba(0,0,0,.3) 0 1px 3px;
 }
 .player-badge {
-  top: 5px;
-  left: 10px;
+  margin: 0 5px;
   border-radius: 50%;
-  position: absolute;
   height: 70px;
   width: 70px;
   -webkit-box-shadow: rgba(0,0,0,.5) 0 0 5px;
@@ -1127,25 +1133,26 @@ hr.h-line {
   transition: all .2s ease-in-out;
   color: #000;
 }
+.player-badge a {
+  color: #2e2e2e;
+}
 .player-badge:hover {
-  transform: scale(1.1);
-  -webkit-box-shadow: rgba(0,0,0,.5) 0 0 8px;
-  -moz-box-shadow: rgba(0,0,0,.5) 0 0 8px;
-  box-shadow: rgba(0,0,0,.5) 0 0 8px;
+  transform: rotate(-360deg);
+  -webkit-box-shadow: rgba(0,0,0,.5) 0 0 10px;
+  -moz-box-shadow: rgba(0,0,0,.5) 0 0 10px;
+  box-shadow: rgba(0,0,0,.5) 0 0 10px;
 }
 #player-logo {
-  margin: auto;
-  padding-left: 29px;
+  padding-left: 28px;
   padding-right: 28px;
-  z-index: 1000;
 }
 #player-logo span {
+  top: 0px;
   font-size: 24px;
   height: 35px;
   font-weight: 600;
   position: absolute;
-  width: 12px;
-  top: 0;
+  width: 14px;
   transform-origin: bottom center;
 }
 .char1 {
