--- a/index/templates/multibar.html
+++ b/index/templates/multibar.html
@@ -1,50 +1,49 @@
-<div class="col-auto col-lg-5" id="multibar-l">
-  <a class="nav-link-dope d-inline-block d-lg-none multibar-options-toggle" href="#multibar-options-collapse" data-toggle="collapse" aria-expanded="true" aria-controls="multibar-options-collapse">
-    <i class="fas fa-bars icon"></i>
-  </a>
-  <div class="player-badge" id="player-image-drop">
+<div class="col-auto col-xl-5" id="multibar-l">
+  <div class="player-badge d-none" id="player-image-drop">
   </div>
-  <a class="multibar-options-toggle lights-toggle"  href="#">
-    <div class="player-badge color-3" id="player-logo">
+  <div class="player-badge color-3" id="player-logo">
+    <a class="multibar-options-toggle lights-toggle"  href="#">
       <span class="char1">d</span>
       <span class="char2">o</span>
       <span class="char3">p</span>
       <span class="char4">e</span>
       <span class="char5">p</span>
       <span class="char6">o</span>
-    </div>
+    </a>
+  </div>
+  <a class="nav-link-dope d-inline-block d-xl-none multibar-options-toggle" href="#multibar-options-collapse" data-toggle="collapse" aria-expanded="true" aria-controls="multibar-options-collapse">
+    <i class="fas fa-bars icon"></i>
   </a>
-  <a class="nav-link-dope charts-link d-none d-lg-inline-block" href="{% url 'charts' %}">
+  <a class="nav-link-dope charts-link d-none d-xl-inline-block" href="{% url 'charts' %}">
     Charts
   </a>
-  <a class="nav-link-dope browse-link d-none d-lg-inline-block" href="{% url 'browse' %}">
+  <a class="nav-link-dope browse-link d-none d-xl-inline-block" href="{% url 'browse' %}">
     Browse
   </a>
   {% if user.is_authenticated %}
-    <a class="nav-link-dope index-link d-none d-lg-inline-block" href="/">
-      Dashboard
-    </a>
-    <a class="nav-link-dope subscriptions-link d-none d-lg-inline-block" href="{% url 'subscriptions' %}">
-      Subscriptions
-    </a>
+  <a class="nav-link-dope index-link d-none d-xl-inline-block" href="/">
+    Dashboard
+  </a>
+  <a class="nav-link-dope subscriptions-link d-none d-xl-inline-block" href="{% url 'subscriptions' %}">
+    Subscriptions
+  </a>
   {% endif %}
 </div>
-<div class="col col-lg-2 d-none d-lg-block" id="multibar-c">
-
+<div class="col col-xl-2 d-none d-xl-block" id="multibar-c">
 </div>
-<div class="col col-lg-5" id="multibar-r">
+<div class="col col-xl-5" id="multibar-r">
   {% if user.is_authenticated %}
-    <a class="nav-link-dope settings-link d-none d-lg-inline-block" href="{% url 'settings' %}">
+    <a class="nav-link-dope settings-link d-none d-xl-inline-block" href="{% url 'settings' %}">
       Settings
     </a>
     <form class="logout-form" method="POST" action="{% url 'logout' %}">
       {% csrf_token %}
-      <button class="nav-link-dope ajax-logout d-none d-lg-inline-block" type="submit">
+      <button class="nav-link-dope ajax-logout d-none d-xl-inline-block" type="submit">
         Logout
       </button>
     </form>
   {% else %}
-    <a class="nav-link-dope ajax-login d-none d-lg-inline-block" href="/?view=login">
+    <a class="nav-link-dope ajax-login d-none d-xl-inline-block" href="/?view=login">
       Login
     </a>
   {% endif %}
@@ -71,33 +70,33 @@
   </form>
 </div>
 <div class="col-12 collapse show" id="multibar-options-collapse">
-  <a class="nav-link-dope charts-link d-inline-block d-lg-none" href="{% url 'charts' %}">
+  <a class="nav-link-dope charts-link d-inline-block d-xl-none" href="{% url 'charts' %}">
     Charts
   </a>
-  <a class="nav-link-dope browse-link d-inline-block d-lg-none" href="{% url 'browse' %}">
+  <a class="nav-link-dope browse-link d-inline-block d-xl-none" href="{% url 'browse' %}">
     Browse
   </a>
   {% if user.is_authenticated %}
-    <a class="nav-link-dope index-link d-inline-block d-lg-none" href="/">
+    <a class="nav-link-dope index-link d-inline-block d-xl-none" href="/">
       Dashboard
     </a>
-    <a class="nav-link-dope subscriptions-link d-inline-block d-lg-none" href="{% url 'subscriptions' %}">
+    <a class="nav-link-dope subscriptions-link d-inline-block d-xl-none" href="{% url 'subscriptions' %}">
       Subscriptions
     </a>
-    <a class="nav-link-dope settings-link d-inline-block d-lg-none" href="{% url 'settings' %}">
+    <a class="nav-link-dope settings-link d-inline-block d-xl-none" href="{% url 'settings' %}">
       Settings
     </a>
     <form class="logout-form d-inline-block" method="POST" action="{% url 'logout' %}">
       {% csrf_token %}
-      <button class="nav-link-dope ajax-logout d-inline-block d-lg-none" type="submit">
+      <button class="nav-link-dope ajax-logout d-inline-block d-xl-none" type="submit">
         Logout
       </button>
     </form>
   {% else %}
-    <a class="nav-link-dope ajax-login d-inline-block d-lg-none" href="/?view=login">
+    <a class="nav-link-dope ajax-login d-inline-block d-xl-none" href="/?view=login">
       Login
     </a>
-    <a class="nav-link-dope ajax-signup d-inline-block d-lg-none" href="/?view=signup">
+    <a class="nav-link-dope ajax-signup d-inline-block d-xl-none" href="/?view=signup">
       Signup
     </a>
   {% endif %}
