--- a/podcasts/templates/pagination.html
+++ b/podcasts/templates/pagination.html
@@ -1,4 +1,4 @@
-<div class="col">
+<div class="col-12">
   <div class="page-buttons">
     {% if results.podcasts.has_previous %}
       {% if not results.podcasts.previous_page_number == 1%}
